src/objects/lightningbuddy__Toaster_Alert_Param__c.object
<CustomObject>
    <fields>
        <fullName>lightningbuddy__Actions__c</fullName>
        <label>Actions</label>
        <referenceTo>lightningbuddy__Actions__c</referenceTo>
        <relationshipLabel>Toaster Alert Params</relationshipLabel>
        <relationshipName>Toaster_Alert_Params</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>lightningbuddy__Link__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>lightningbuddy__Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Toaster Alert Param</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Toaster Alert Param Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Toaster Alert Params</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>